[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/character/Giant.png" type="Texture" id=1]
[ext_resource path="res://actor/unit/Giant.gd" type="Script" id=2]
[ext_resource path="res://weapon_and_tool/IronPunch.tscn" type="PackedScene" id=3]
[ext_resource path="res://actor/unit/animation_and_effect/Blood_effect.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/character/giant1.png" type="Texture" id=5]
[ext_resource path="res://assets/character/giant2.png" type="Texture" id=6]
[ext_resource path="res://assets/character/giant3.png" type="Texture" id=7]
[ext_resource path="res://assets/character/shadow.png" type="Texture" id=8]
[ext_resource path="res://actor/unit/animation_and_effect/healthBar.tscn" type="PackedScene" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 56.5685

[sub_resource type="CircleShape2D" id=3]
radius = 250.0

[sub_resource type="Animation" id=4]
resource_name = "bleeding"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("blood_effect:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="giant" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( -56, -120 )
scale = Vector2( 0.627563, 0.307693 )
texture = ExtResource( 8 )
offset = Vector2( 89.234, 558.999 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 0.374311, 0.377104 )
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -4.05312e-06, 2.34842e-05 )
scale = Vector2( 0.962971, 0.965517 )
frames = SubResource( 1 )
animation = "move"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="view_range" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="view_range"]
shape = SubResource( 3 )

[node name="attack_cooldown" type="Timer" parent="."]

[node name="direction" type="Node2D" parent="."]

[node name="ironPunch" parent="direction" instance=ExtResource( 3 )]

[node name="blood_effect" parent="." instance=ExtResource( 4 )]

[node name="AnimationBlooding" type="AnimationPlayer" parent="."]
anims/bleeding = SubResource( 4 )

[node name="healthBar" parent="." instance=ExtResource( 9 )]
margin_left = -44.5
margin_top = -80.0
margin_right = 176.5
margin_bottom = -43.0
rect_scale = Vector2( 0.407322, 0.44 )
